dual/app/Kefico/Dsa.Kefico.Cp/bin/x86/nmc2.h

typedef struct NMC_PARA_LOGIC
{
   //-------------------------------------------------------------
	short	nEmg;					// EMG
	short	nEncCount;				// 엔코더 카운트 모드

	short	nEncDir;				// 엔코더 카운트 방향
	short	nEncZ;					// 엔코더 Z

	short	nNear;					// NEAR(HOME)
	short	nMLimit;				// - Limit

	short	nPLimit;				// + Limit
	short	nAlarm;					// Alarm

	short	nInp;					// INPOSITION
	short	nSReady;				// Servo Ready

	short	nPulseMode;				// 1p/2p Mode
	//-------------------------------------------------------------

	short	nLimitStopMode;			// Limit stop mode
	short	nBusyOff;				// Busy off mode

	short	nSWEnable;				// sw limit 활성화 여부
   //-------------------------------------------------------------
	double  dSWMLimitPos;
	double  dSWPLimitPos;
}PARALOGIC,*PPARALOGIC;


typedef struct NMC_PARA_LOGIC_EX
{
   //-------------------------------------------------------------
	short	nEmg;					// EMG
	short	nEncCount;				// 엔코더 카운트 모드

	short	nEncDir;				// 엔코더 카운트 방향
	short	nEncZ;					// 엔코더 Z

	short	nNear;					// NEAR(HOME)
	short	nMLimit;				// - Limit

	short	nPLimit;				// + Limit
	short	nAlarm;					// Alarm

	short	nInp;					// INPOSITION
	short	nSReady;				// Servo Ready

	short	nPulseMode;				// 1p/2p Mode
	//-------------------------------------------------------------

	short	nLimitStopMode;			// Limit stop mode
	short	nBusyOff;				// Busy off mode

	short	nSWEnable;				// sw limit 활성화 여부
	//-------------------------------------------------------------
	double	dSWMLimitPos;
	double	dSWPLimitPos;

	//-------------------------------------------------------------
	// 원점 완료상태 해지 사용여부
	short	nHDoneCancelAlarm;		// Alarm 발생 시 사용여부
	short	nHDoneCancelServoOff;	// Servo Off 시 사용여부
	short	nHDoneCancelCurrentOff;	// Current Off 시 사용여부
	short	nHDoneCancelServoReady;	// Servo Ready 해제 시 사용여부

	short	nDummy[10];				// 예약
}PARALOGICEX,*PPARALOGICEX;


typedef struct NMC_PARA_SPEED{
	double	dStart;
	double	dAcc;
	double	dDec;
	double	dDrive;
	double	dJerkAcc;
	double	dJerkDec;
}PARASPEED,*PPARASPEED;


//{
typedef struct NMC_AXES_MOTION_OUT
{
	short nCurrentOn[8];		// Motor OnOff
	short nServoOn[8];			// Servo OnOff
	short nDCCOn[8];			// Reset DCC
	short nAlarmResetOn[8];		// Reset Alarm
}NMCAXESMOTIONOUT,*PNMCAXESMOTIONOUT;


typedef struct NMC_HOME_FLAG{
    short nSrchFlag[8];
    short nStatusFlag[8];
}NMCHOMEFLAG,*PNMCHOMEFLAG;


typedef struct NMC_CONT_STATUS
{
	short nStatus[2];
	short nExeNodeNo[2];
}NMCCONTSTATUS,*PNMCCONTSTATUS;


typedef struct TNMC_EQUIP_LIST
{
	/*
	192.168.0.11
		BIT0~BIT7  : 192
		BIT8~BIT15  : 168
		BIT16~BIT23  : 0
		BIT24~BIT31  : 11
	*/
	int lIP[200];
	int lModelType[200];
	short nMotionType[200];
	short nDioType[200];
	short nEXDio[200];
	short nMDio[200];

}NMCEQUIPLIST,*PNMCEQUIPLIST;


typedef struct TNMC_MAP_DATA
{
	int		nMapCount;
	int	lMapData[52];
	double	dMapData[52];
}NMCMAPDATA,*PNMCMAPDATA;

//------------------------------------------------------------------------------
/**
@breif  NMC2 장치와의 연결을 한다.
@return  0 이면 성공, 다른 경우 실패
@param  nNmcNo NMC2 장치 번호
@see nmc_CloseDevice
*/
short WINAPI nmc_OpenDevice(short nNmcNo);

short WINAPI nmc_OpenDeviceEx(short nNmcNo, long lWaitTime);


/**
@breif  NMC2 장치와의 연결을 해제 한다.
@return  없음
@param  nNmcNo NMC2 장치 번호
@see nmc_OpenDevice
*/
void WINAPI nmc_CloseDevice(short nNmcNo);

//------------------------------------------------------------------------------
/**
@breif  NMC2 축의 현재 로직 정보를 읽어 온다.
@return  0 이면 성공, 다른 경우 실패
@param  nNmcNo NMC2 장치 번호\n
	nAxisNo 로직 정보를 읽어 올 축 번호\n
	pLogic 로직 정보가 들어갈 PARALOGIC 포인터 변수 
@see NMC_PARA_LOGIC
*/
short WINAPI nmc_GetParaLogic(short nNmcNo, short nAxisNo, PPARALOGIC pLogic);

short WINAPI nmc_GetParaLogicEx(short nNmcNo, short nAxisNo, PPARALOGICEX pLogicEx);


/**
@breif  NMC2 축의 로직 정보를 설정한다.
@return  0 이면 성공, 다른 경우 실패
@param  nNmcNo NMC2 장치 번호\n
	nAxisNo 로직 정보를 설정할 축 번호\n
	pLogic 로직 정보가 들어갈 PARALOGIC 포인터 변수 
@see NMC_PARA_LOGIC
*/
short WINAPI nmc_SetParaLogic(short nNmcNo, short nAxisNo, PPARALOGIC pLogic);

short WINAPI nmc_SetParaLogicEx(short nNmcNo, short nAxisNo, PPARALOGICEX pLogicEx);


/**
@breif  NMC2 8축의 로직 정보를 지정한 파일에서 설정한다.
@return  0 이면 성공, 다른 경우 실패
@param  nNmcNo NMC2 장치 번호\n
	szFileName 8축 로직정보가 들어있는 파일이름 
@see NMC_PARA_LOGIC
*/
short WINAPI nmc_SetParaLogicFile(short nNmcNo, char *szFileName);


/**
@breif  NMC2 축의 현재 속도 정보를 읽어 온다.
@return  0 이면 성공, 다른 경우 실패
@param  nNmcNo NMC2 장치 번호\n
	nAxisNo 속도 정보를 읽어 올 축 번호\n
	pSpeed 속도 정보가 들어갈 PARASPEED 포인터 변수 
@see NMC_PARA_SPEED
*/
short WINAPI nmc_GetParaSpeed(short nNmcNo, short nAxisNo,PPARASPEED pSpeed);


/**
@breif  NMC2 축의 링카운트 정보를 읽어 온다.
@return  0 이면 성공, 다른 경우 실패
@param  nNmcNo NMC2 장치 번호\n
	nAxisNo 속도 정보를 읽어 올 축 번호\n
	plMaxPulse 링카운트 펄스 최대값을 읽어 올 포인터 변수\n
	plMaxEncoder 링카운트 엔코더 최대값을 읽어 올 포인터 변수\n 
	pnRingMode 링카운트 활성화 여부를 읽어 올 포인터 변수 0 : Disable, 1 : Enable
@see nmc_SetRingCountMode\n
	nmc_MoveRing
*/
short WINAPI nmc_GetRingCountMode(short nNmcNo, short nAxisNo,int *plMaxPulse,int *plMaxEncoder, short *pnRingMode);

short WINAPI nmc_GetParaTargetPos(short nNmcNo, short nAxisNo,double *pdTargetPos);

short WINAPI nmc_GetAxesMotionOut(short nNmcNo, PNMCAXESMOTIONOUT pOutStatus);

	
//------------------------------------------------------------------------------
short WINAPI nmc_GetDriveAxesSpeed(short nNmcNo, double *pDrvSpeed);

//------------------------------------------------------------------------------
short WINAPI nmc_SetEmgLogic(short nNmcNo, short nGroupNo, short nLogic);

short WINAPI nmc_SetPlusLimitLogic(short nNmcNo, short nAxisNo, short nLogic);

short WINAPI nmc_SetMinusLimitLogic(short nNmcNo, short nAxisNo, short nLogic);

short WINAPI nmc_SetSWLimitLogic(short nNmcNo, short nAxisNo, short nUse,double dSwMinusPos, double dSwPlusPos);

short WINAPI nmc_SetSWLimitLogicEx(short nNmcNo, short nAxisNo, short nUse,double dSwMinusPos, double dSwPlusPos,short nOpt);

short WINAPI nmc_SetAlarmLogic(short nNmcNo, short nAxisNo, short nLogic);

short WINAPI nmc_SetNearLogic(short nNmcNo, short nAxisNo, short nLogic);

short WINAPI nmc_SetInPoLogic(short nNmcNo, short nAxisNo, short nLogic);

short WINAPI nmc_SetSReadyLogic(short nNmcNo, short nAxisNo, short nLogic);

//------------------------------------------------------------------------------
// ENCODER 관련
short WINAPI nmc_SetEncoderCount(short nNmcNo, short nAxisNo, short nCountMode);

short WINAPI nmc_SetEncoderDir(short nNmcNo, short nAxisNo, short nCountDir);

	 short WINAPI nmc_SetEncoderMode(short nNmcNo, short nAxisNo, short nMode); // 사용안함
short WINAPI nmc_SetEncoderZLogic(short nNmcNo, short nAxisNo, short nLogic);

//------------------------------------------------------------------------------
short WINAPI nmc_SetPulseLogic(short nNmcNo, short nAxisNo, short nLogic);

	short WINAPI nmc_SetPulseMode(short nNmcNo, short nAxisNo, short nMode); // 사용안함
	short WINAPI nmc_Set2PulseDir(short nNmcNo, short nAxisNo, short nDir);  // 사용안함
	short WINAPI nmc_Set1PulseDir(short nNmcNo, short nAxisNo, short nDir);  // 사용안함
	short WINAPI nmc_SetPulseActive(short nNmcNo, short nAxisNo, short nPulseActive);  // 사용안함
//------------------------------------------------------------------------------
	short WINAPI nmc_GetHomeDoneAutoCancel(short nNmcNo, short nAxisNo, short *pnAlarm, short *pnServoOff, short *pnCurrentOff, short *pnServoReady);

	short WINAPI nmc_SetHomeDoneAutoCancel(short nNmcNo, short nAxisNo, short nAlarm, short nServoOff, short nCurrentOff, short nServoReady);

//------------------------------------------------------------------------------
short WINAPI nmc_SetSCurveSpeed(short nNmcNo, short nAxisNo,double dStartSpeed, 
									double dAcc,double dDec ,double dDriveSpeed);

short WINAPI nmc_SetSpeed(short nNmcNo, short nAxisNo,double dStartSpeed, 
						  double dAcc,double dDec ,double dDriveSpeed);

short WINAPI nmc_SetOverrideRunSpeed(short nNmcNo, short nAxisNo,double dAcc,double dDec ,double dDriveSpeed);

short WINAPI nmc_SetOverrideDriveSpeed(short nNmcNo,short nAxisNo, double dDriveSpeed);

short WINAPI nmc_SetAccSpeed(short nNmcNo, short nAxisNo, double dAcc);

short WINAPI nmc_SetDecSpeed(short nNmcNo, short nAxisNo, double dDec);

//------------------------------------------------------------------------------
short WINAPI nmc_AbsMove(short nNmcNo, short nAxisNo,double dPos);

short WINAPI nmc_RelMove(short nNmcNo, short nAxisNo,double dAmount);

short WINAPI nmc_VelMove(short nNmcNo, short nAxisNo, double dPos, double dDrive,short nMode);


short WINAPI nmc_AbsOver(short nNmcNo, short nAxisNo,double dPos);


short WINAPI nmc_VarRelMove(short nNmcNo, short nAxisCount,short *pnAxisList,double *pdAmount);

short WINAPI nmc_VarAbsMove(short nNmcNo, short nAxisCount,short *pnAxisList,double *pdPosList);

short WINAPI nmc_VarAbsOver(short nNmcNo, short nAxisCount,short *pnAxisList,double *pdPosList);

//------------------------------------------------------------------------------
short WINAPI nmc_JogMove(short nNmcNo, short nAxis, short nDir);

//------------------------------------------------------------------------------
short WINAPI nmc_SuddenStop(short nNmcNo, short nAxisNo);

short WINAPI nmc_DecStop(short nNmcNo, short nAxisNo);
/* 무제한 연속 보간 상태 체크 시 응답 구조체 - UCI */
typedef struct NMC_CONTI_STATUS
{
	short nContiRun[2];                     // 연속 보간 실행 여부(1:Run, 0:Stop)
	short nContiWait[2];                    // 1: 큐버퍼의 노드를 모두 소진하여 다음 노드 전송을 대기, 0:큐버퍼에 실행 할 Data가 있음
	short nContiRemainBuffNum[2];           // 비어 있는 큐버퍼의 수(0 ~ 1024)
	unsigned long nContiExecutionNum[2];    // 실행 중인 연속 보간의 수(0 ~ 4,294,967,295)
	short nDummy[6];                        // dummy buff.
}NMCCONTISTATUS,*PNMCCONTISTATUS;