dual/app/Kefico/Dsa.Kefico.Cp/Dsu.Driver.PaixWrapper/nmc2.cs


        [StructLayout(LayoutKind.Sequential, Pack = 1)]
        public struct NMCCONTSTATUS
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
            public short[] nStatus;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
            public short[] nExeNodeNo;
        };

        [StructLayout(LayoutKind.Sequential, Pack = 1)]
        public struct NMCHOMEFLAG
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 8)]
            public short[] nSrchFlag;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 8)]
            public short[] nStatusFlag;
        };

        [StructLayout(LayoutKind.Sequential, Pack = 1)]
        public struct NMCEQUIPLIST
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 200)]
            public int[] lIp;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 200)]
            public int[] lModelType;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 200)]
            public short[] nMotionType;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 200)]
            public short[] nDioType;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 200)]
            public short[] nEXDIo;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 200)]
            public short[] nMDio;

        };

        [StructLayout(LayoutKind.Sequential, Pack = 1)]
        public struct NMCMAPDATA
        {
            int nMapCount;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 52)]
            public int[] lMapData;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 52)]
            public double[] dMapData;
        };


        [StructLayout(LayoutKind.Sequential, Pack = 1)]
        public struct NMCCONTISTATUS
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
            public short[] nContiRun;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
            public short[] nContiWait;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
            public short[] nContiRemainBuffNum;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
            public ulong[] nContiExecutionNum;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 6)]
            public short[] nDummy;
        };
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_OpenDevice")]
        public static extern short OpenDevice(short nNmcNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_OpenDeviceEx")]
        public static extern short OpenDeviceEx(short nNmcNo, long lWaitTime);
        [DllImport("NMC2.dll", EntryPoint = "nmc_CloseDevice")]
        public static extern void CloseDevice(short nNmcNo);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetParaLogic")]
        public static extern short GetParaLogic(short nNmcNo, short nAxisNo, out NMCPARALOGIC pLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetParaLogicEx")]
        public static extern short GetParaLogicEx(short nNmcNo, short nAxisNo, out NMCPARALOGICEX pLogicEx);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetParaSpeed")]
        public static extern short GetParaSpeed(short nNmcNo, short nAxisNo, out NMCPARASPEED pSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetRingCountMode")]
        public static extern short GetRingCountMode(short nNmcNo, short nAxisNo, out int plMaxPulse, out int plMaxEncoder, out short pnRingMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetParaTargetPos")]
        public static extern short GetParaTargetPos(short nNmcNo, short nAxisNo, out double pdTargetPos);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDriveAxesSpeed")]
        public static extern short GetDriveAxesSpeed(short nNmcNo, double[] pDrvSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetAxesMotionOut")]
        public static extern short GetAxesMotionOut(short nNmcNo, out NMCAXESMOTIONOUT pOutStatus);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEmgLogic")]
        public static extern short SetEmgLogic(short nNmcNo, short nGroupNo, short nLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetPlusLimitLogic")]
        public static extern short SetPlusLimitLogic(short nNmcNo, short nAxisNo, short nLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMinusLimitLogic")]
        public static extern short SetMinusLimitLogic(short nNmcNo, short nAxisNo, short nLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSWLimitLogic")]
        public static extern short SetSWLimitLogic(short nNmcNo, short nAxisNo, short nUse, double dSwMinusPos, double dSwPlusPos);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSWLimitLogicEx")]
        public static extern short SetSWLimitLogicEx(short nNmcNo, short nAxisNo, short nUse, double dSwMinusPos, double dSwPlusPos, short nOpt);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetAlarmLogic")]
        public static extern short SetAlarmLogic(short nNmcNo, short nAxisNo, short nLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetNearLogic")]
        public static extern short SetNearLogic(short nNmcNo, short nAxisNo, short nLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetInPoLogic")]
        public static extern short SetInPoLogic(short nNmcNo, short nAxisNo, short nLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSReadyLogic")]
        public static extern short SetSReadyLogic(short nNmcNo, short nAxisNo, short nLogic);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEncoderCount")]
        public static extern short SetEncoderCount(short nNmcNo, short nAxisNo, short nCountMode);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEncoderDir")]
        public static extern short SetEncoderDir(short nNmcNo, short nAxisNo, short nCountDir);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEncoderMode")]
        public static extern short SetEncoderMode(short nNmcNo, short nAxisNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEncoderZLogic")]
        public static extern short SetEncoderZLogic(short nNmcNo, short nAxisNo, short nLogic);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetHomeDoneAutoCancel")]
        public static extern short GetHomeDoneAutoCancel(short nNmcNo, short nAxisNo, out short pnAlarm, out short pnServoOff, out short pnCurrentOff, out short pnServoReady);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetHomeDoneAutoCancel")]
        public static extern short SetHomeDoneAutoCancel(short nNmcNo, short nAxisNo, short nAlarm, short nServoOff, short nCurrentOff, short nServoReady);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetParaLogic")]
        public static extern short SetParaLogic(short nNmcNo, short nAxisNo, out NMCPARALOGIC pLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetParaLogicEx")]
        public static extern short SetParaLogicEx(short nNmcNo, short nAxisNo, out NMCPARALOGICEX pLogicEx);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetParaLogicFile")]
        public static extern short SetParaLogicFile(short nNmcNo, char[] pStr);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetPulseMode")]
        public static extern short SetPulseMode(short nNmcNo, short nAxisNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetPulseLogic")]
        public static extern short SetPulseLogic(short nNmcNo, short nAxisNo, short nLogic);
        [DllImport("NMC2.dll", EntryPoint = "nmc_Set2PulseDir")]
        public static extern short Set2PulseDir(short nNmcNo, short nAxisNo, short nDir);
        [DllImport("NMC2.dll", EntryPoint = "nmc_Set1PulseDir")]
        public static extern short Set1PulseDir(short nNmcNo, short nAxisNo, short nDir);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetPulseActive")]
        public static extern short SetPulseActive(short nNmcNo, short nAxisNo, short nPulseActive);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSCurveSpeed")]
        public static extern short SetSCurveSpeed(short nNmcNo, short nAxisNo, double dStartSpeed,
                                        double dAcc, double dDec, double dDriveSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSpeed")]
        public static extern short SetSpeed(short nNmcNo, short nAxisNo, double dStartSpeed,
                              double dAcc, double dDec, double dDriveSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetOverrideRunSpeed")]
        public static extern short SetOverrideRunSpeed(short nNmcNo, short nAxisNo, double dAcc, double dDec, double dDriveSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetOverrideDriveSpeed")]
        public static extern short SetOverrideDriveSpeed(short nNmcNo, short nAxisNo, double dDriveSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetAccSpeed")]
        public static extern short SetAccSpeed(short nNmcNo, short nAxisNo, double dAcc);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDecSpeed")]
        public static extern short SetDecSpeed(short nNmcNo, short nAxisNo, double dDec);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_AbsMove")]
        public static extern short AbsMove(short nNmcNo, short nAxisNo, double dPos);
        [DllImport("NMC2.dll", EntryPoint = "nmc_RelMove")]
        public static extern short RelMove(short nNmcNo, short nAxisNo, double dAmount);
        [DllImport("NMC2.dll", EntryPoint = "nmc_VelMove")]
        public static extern short VelMove(short nNmcNo, short nAxisNo, double dPos, double dDrive, short nMode);

        [DllImport("NMC2.dll", EntryPoint = "nmc_AbsOver")]
        public static extern short AbsOver(short nNmcNo, short nAxisNo, double dPos);

        [DllImport("NMC2.dll", EntryPoint = "nmc_VarRelMove")]
        public static extern short VarRelMove(short nNmcNo, short nAxisCount, short[] pnAxisNo, double[] pdAmount);
        [DllImport("NMC2.dll", EntryPoint = "nmc_VarAbsMove")]
        public static extern short VarAbsMove(short nNmcNo, short nAxisCount, short[] pnAxisNo, double[] pdPosList);
        [DllImport("NMC2.dll", EntryPoint = "nmc_VarAbsOver")]
        public static extern short VarAbsOver(short nNmcNo, short nAxisCount, short[] pnAxisNo, double[] pdPosList);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_JogMove")]
        public static extern short JogMove(short nNmcNo, short nAxis, short Dnir);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SuddenStop")]
        public static extern short SuddenStop(short nNmcNo, short nAxisNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_DecStop")]
        public static extern short DecStop(short nNmcNo, short nAxisNo);
